--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>javaScript 原生dom操作集合汇总</title>
+    <title>手机端单个页面组件汇总整理</title>
   </head>
   <body>
     <div id="con"></div>
