--- a/demo/Uploader.html
+++ b/demo/Uploader.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="./css/common/reset.css">
   <link rel="stylesheet" href="./css/common/example.css">
   <link rel="stylesheet" href="./css/common/animate.css">
-  <link rel="stylesheet" href="./css/weui_button.css">
-  <link rel="stylesheet" href="./css/weui_dialog.css">
-  <link rel="stylesheet" href="./css/weui_picker.css">
+  <link rel="stylesheet" href="./css/common/icon_font.css">
+  <link rel="stylesheet" href="./css/weui_uploader.css">
+  <link rel="stylesheet" href="./css/weui_gallery.css">
   <script type="text/javascript" src="./js/jquery.min.js"></script>
   <script type="text/javascript" src="./js/weui.min.js"></script>
 </head>
