--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <nav class="cover-navigation cover-navigation--primary">
                   <ul class="navigation">
                     <li class="navigation__item"><a href="#" title="访问博客" class="blog-button">博客</a></li>
-                    <li class="navigation__item"><a href="#" target="_blank" title="博客目录">目录</a></li>
+                    <li class="navigation__item"><a href="./dist/blog.html" target="_blank" title="博客目录">目录</a></li>
                     <li class="navigation__item"><a href="https://github.com/liuyun012" target="_blank" title="liuyun012's Github blog">GitHub</a></li>
                     <li class="navigation__item"><a href="#" target="_blank" title="大魔法师">大魔法师</a></li>
                     <li class="navigation__item"><a href="#" target="_blank" title="关于作者 流云">关于</a></li>
