--- a/demo/Toast.html
+++ b/demo/Toast.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="./js/jquery.min.js"></script>
   </head>
   <body>
-    <div class=".container">
+    <div class="container">
 
       <div class="page">
         <div class="page__hd">
