--- a/demo/Toast.html
+++ b/demo/Toast.html
@@ -36,7 +36,7 @@
         <!--end toast-->
 
         <!-- loading toast -->
-        <div id="loadingToast" style="display: none;">
+        <div id="loadingToast">
           <div class="weui-mask_transparent"></div>
           <div class="weui-toast">
             <i class="weui-loading weui-icon_toast"></i>
